--- a/daksham-developers/src/app/project-page/project-page.component.css
+++ b/daksham-developers/src/app/project-page/project-page.component.css
@@ -3,33 +3,6 @@
     height: auto;
 }
 
-/* The dots/bullets/indicators */
-.dots {
-    display: inline-block;
-    height: 30px;
-    position: absolute;
-    top: 85%;
-    left: 47%;
-    width: 100px;
-}
-
-.dot {
-    height: 15px;
-    width: 15px;
-    margin: 0 5px;
-    background-color: #D7B96D;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-}
-
-.active {
-    background-color: #47AD9F;
-}
-
-.dot:hover {
-    cursor: pointer;
-}
 
 /* carousel.component.css */
 .carousel-fade .carousel-item {
@@ -55,14 +28,6 @@
 @media only screen and (min-width: 769px) {
     .carousel-item img {
         aspect-ratio: 2.81/1;
-    }
-}
-
-@media only screen and (max-width: 769px) {
-    .dots {
-        height: 30px;
-        top: 90%;
-        left: 40%;
     }
 }
 
@@ -161,10 +126,14 @@
     padding-left: 10%;
 }
 
-iframe {
-    border: none;
-    max-width: 100%;
-    height: 400px;
+.location-adv {
+    margin-top: 0px;
+    padding-top: 0px;
+}
+
+.google-map {
+    padding-bottom: 5%;
+    padding-left: 15%;
 }
 
 h4 {
